blog: Fix complementary ContentGroup classes and styling
Previously, we had margins applied to content group, so when
we added a background color to it, the background would only
extend to immediate boundaries of the content group, and not
cover the whole bottom of the article page.

Therefore, switch to padding instead so we can have the same
spacing around the group but be able to extend its background
to cover the whole bottom.

Lastly, add a margin-right to prevent the content group from
hiding the scrolled window slider, and update the class names
used for those content groups.

https://phabricator.endlessm.com/T17076

--- a/data/css/blog.scss
+++ b/data/css/blog.scss
@@ -77,6 +77,15 @@ $highlighted-background-color: darken($background-dark-color, 5%) !default;
   }
 }
 
+.ContentGroup--complementarycontent {
+  .ContentGroupContentGroup__title {
+    font-size: 46px;
+    font-weight: 900;
+    color: $primary-medium-color;
+    margin: 30px 0px 20px 0px;
+  }
+}
+
 .home-page {
   .main-arrangement {
     margin-top: 40px;
@@ -117,24 +126,16 @@ $highlighted-background-color: darken($background-dark-color, 5%) !default;
     color: $primary-light-color;
     margin: 0px 0px 33px 0px;
   }
-
-  .ContentGroupContentGroup__title {
-    font-size: 46px;
-    font-weight: 900;
-    color: $primary-medium-color;
-    margin: 30px 0px 20px 0px;
-  }
 }
 
 .article-page {
-  .related-posts {
-    margin: 0px 50px 20px 50px;
+  .ContentGroup--complementarycontent {
+    background-color: $background-light-color;
+    margin-right: 14px;
+    padding: 0px 50px 20px 50px;
 
-    .ContentGroupContentGroup__title {
-      font-size: 46px;
-      font-weight: 900;
-      color: $primary-medium-color;
-      margin: 30px 0px 20px 0px;
+    .composite & {
+      padding: 0px 0px 20px 0px;
     }
   }
 }
